--- a/.classpath
+++ b/.classpath
@@ -9,5 +9,6 @@
 	<classpathentry kind="lib" path="logger/logback-classic-1.4.7.jar"/>
 	<classpathentry kind="lib" path="logger/logback-core-1.4.7.jar"/>
 	<classpathentry kind="lib" path="logger/slf4j-api-2.0.7.jar"/>
+	<classpathentry kind="lib" path="logger/commons-io-2.11.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
